_archive/content-services/3.4/concepts/share-repodoclib.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: Customization
option: Share repository doclib document library
---

# Share repository document library

The Share repository document library is a feature that gives full access to the Alfresco repository.

The default content structure for Alfresco Share is based on sites, and this does not give full visibility of the content in the repository. By enabling the repository document library configuration setting, you have access to multiple navigation options, for example, folders and categories, tags, and filters. This feature also allows you to recreate and edit text files, for example, within the Data Dictionary.

It is possible to copy or move files to the Share document library without any repository permissions.

-   **[Hiding the Share repository document library](../tasks/share-repodoclib-hide.md)**  
The section describes how to hide the **Repository** link in the Share header.

**Parent topic:**[Customizing Alfresco Share configuration items](../tasks/share-customize.md)

